--- a/src/style.css
+++ b/src/style.css
@@ -47,3 +47,6 @@
 .function {
    transform: translateX(0);
 }
+.bg-safari {
+   background: url("../images/ctabg.gif");
+}
